infra/k8s/overlays/prod/201-auth-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 3
