infra/k8s/overlays/prod/203-tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  namespace: ticketing
spec:
  replicas: 2
