infra/k8s/overlays/prod/204-tickets-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 3
