infra/k8s/overlays/prod/206-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: ticketing
spec:
  replicas: 2
