infra/k8s/overlays/prod/208-expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  namespace: ticketing
spec:
  replicas: 3
