infra/k8s/overlays/prod/210-payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
  namespace: ticketing
spec:
  replicas: 2
