infra/k8s/overlays/prod/900-ticketing-ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing # application namespace
  annotations:
    kubernetes.io/ingress.class: nginx
